use wrapper class' valueOf method instead of constructor
git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.x@16826 bf997673-6b11-0410-b953-e057580c5b09